generated/MathExprParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 MathExpr.g 2014-12-07 21:18:39
package generated;
import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class MathExprParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DO", "UNKNOWN", "BLOCK", "PARAMETERS", "CALL", "CONVERT", "IF", "ELSE", "FOR", "WHILE", "AND", "OR", "NOT", "XOR", "INT_DIV", "INT_MOD", "SHR", "SHL", "IN", "VAR", "RETURN", "ARRAY", "CAPACITY", "FUNCTION", "PROGRAM", "TRUE", "FALSE", "WS", "ML_COMMENT", "NUMBER", "IDENTIFIER", "ADD", "SUB", "MUL", "DIV", "BIT_AND", "BIT_OR", "ASSIGN", "GE", "LE", "NOTEQUALS", "EQUALS", "GT", "LT", "','", "'('", "')'", "'{'", "'}'", "';'", "'['", "']'"
    };
    public static final int SHR=20;
    public static final int FUNCTION=27;
    public static final int LT=47;
    public static final int CAPACITY=26;
    public static final int BIT_AND=39;
    public static final int PARAMETERS=7;
    public static final int WHILE=13;
    public static final int SHL=21;
    public static final int DO=4;
    public static final int FOR=12;
    public static final int SUB=36;
    public static final int EQUALS=45;
    public static final int NOT=16;
    public static final int AND=14;
    public static final int EOF=-1;
    public static final int IF=10;
    public static final int T__55=55;
    public static final int ML_COMMENT=32;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int IN=22;
    public static final int T__53=53;
    public static final int BIT_OR=40;
    public static final int UNKNOWN=5;
    public static final int T__54=54;
    public static final int IDENTIFIER=34;
    public static final int INT_DIV=18;
    public static final int RETURN=24;
    public static final int VAR=23;
    public static final int T__50=50;
    public static final int ARRAY=25;
    public static final int ADD=35;
    public static final int INT_MOD=19;
    public static final int GE=42;
    public static final int XOR=17;
    public static final int CONVERT=9;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int ELSE=11;
    public static final int NUMBER=33;
    public static final int NOTEQUALS=44;
    public static final int MUL=37;
    public static final int TRUE=29;
    public static final int WS=31;
    public static final int BLOCK=6;
    public static final int OR=15;
    public static final int ASSIGN=41;
    public static final int GT=46;
    public static final int PROGRAM=28;
    public static final int CALL=8;
    public static final int DIV=38;
    public static final int FALSE=30;
    public static final int LE=43;

    // delegates
    // delegators


        public MathExprParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MathExprParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[83+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return MathExprParser.tokenNames; }
    public String getGrammarFileName() { return "MathExpr.g"; }


    public static class identifier_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "identifier"
    // MathExpr.g:77:1: identifier : IDENTIFIER ;
    public final MathExprParser.identifier_return identifier() throws RecognitionException {
        MathExprParser.identifier_return retval = new MathExprParser.identifier_return();
        retval.start = input.LT(1);
        int identifier_StartIndex = input.index();
        Object root_0 = null;

        Token IDENTIFIER1=null;

        Object IDENTIFIER1_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // MathExpr.g:77:11: ( IDENTIFIER )
            // MathExpr.g:77:13: IDENTIFIER
            {
            root_0 = (Object)adaptor.nil();

            IDENTIFIER1=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_identifier812); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENTIFIER1_tree = (Object)adaptor.create(IDENTIFIER1);
            adaptor.addChild(root_0, IDENTIFIER1_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, identifier_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "identifier"

    public static class parameters_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "parameters"
    // MathExpr.g:80:1: parameters : ( term ( ',' term )* )? ;
    public final MathExprParser.parameters_return parameters() throws RecognitionException {
        MathExprParser.parameters_return retval = new MathExprParser.parameters_return();
        retval.start = input.LT(1);
        int parameters_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal3=null;
        MathExprParser.term_return term2 = null;

        MathExprParser.term_return term4 = null;


        Object char_literal3_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // MathExpr.g:80:11: ( ( term ( ',' term )* )? )
            // MathExpr.g:80:13: ( term ( ',' term )* )?
            {
            root_0 = (Object)adaptor.nil();

            // MathExpr.g:80:13: ( term ( ',' term )* )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==NOT||(LA2_0>=TRUE && LA2_0<=FALSE)||(LA2_0>=NUMBER && LA2_0<=IDENTIFIER)||LA2_0==49) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // MathExpr.g:80:15: term ( ',' term )*
                    {
                    pushFollow(FOLLOW_term_in_parameters823);
                    term2=term();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, term2.getTree());
                    // MathExpr.g:80:20: ( ',' term )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==48) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // MathExpr.g:80:21: ',' term
                    	    {
                    	    char_literal3=(Token)match(input,48,FOLLOW_48_in_parameters826); if (state.failed) return retval;
                    	    pushFollow(FOLLOW_term_in_parameters829);
                    	    term4=term();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, term4.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, parameters_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "parameters"

    public static class call_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "call"
    // MathExpr.g:81:1: call : identifier '(' parameters ')' -> ^( CALL identifier ^( PARAMETERS ( parameters )? ) ) ;
    public final MathExprParser.call_return call() throws RecognitionException {
        MathExprParser.call_return retval = new MathExprParser.call_return();
        retval.start = input.LT(1);
        int call_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal6=null;
        Token char_literal8=null;
        MathExprParser.identifier_return identifier5 = null;

        MathExprParser.parameters_return parameters7 = null;


        Object char_literal6_tree=null;
        Object char_literal8_tree=null;
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
        RewriteRuleSubtreeStream stream_parameters=new RewriteRuleSubtreeStream(adaptor,"rule parameters");
        RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // MathExpr.g:81:5: ( identifier '(' parameters ')' -> ^( CALL identifier ^( PARAMETERS ( parameters )? ) ) )
            // MathExpr.g:81:7: identifier '(' parameters ')'
            {
            pushFollow(FOLLOW_identifier_in_call842);
            identifier5=identifier();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_identifier.add(identifier5.getTree());
            char_literal6=(Token)match(input,49,FOLLOW_49_in_call844); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_49.add(char_literal6);

            pushFollow(FOLLOW_parameters_in_call846);
            parameters7=parameters();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_parameters.add(parameters7.getTree());
            char_literal8=(Token)match(input,50,FOLLOW_50_in_call848); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_50.add(char_literal8);



            // AST REWRITE
            // elements: parameters, identifier
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 81:38: -> ^( CALL identifier ^( PARAMETERS ( parameters )? ) )
            {
                // MathExpr.g:81:41: ^( CALL identifier ^( PARAMETERS ( parameters )? ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CALL, "CALL"), root_1);

                adaptor.addChild(root_1, stream_identifier.nextTree());
                // MathExpr.g:81:59: ^( PARAMETERS ( parameters )? )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(PARAMETERS, "PARAMETERS"), root_2);

                // MathExpr.g:81:72: ( parameters )?
                if ( stream_parameters.hasNext() ) {
                    adaptor.addChild(root_2, stream_parameters.nextTree());

                }
                stream_parameters.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, call_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "call"

    public static class group_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "group"
    // MathExpr.g:83:1: group : ( '(' term ')' | NUMBER | TRUE | FALSE | identifier | call );
    public final MathExprParser.group_return group() throws RecognitionException {
        MathExprParser.group_return retval = new MathExprParser.group_return();
        retval.start = input.LT(1);
        int group_StartIndex = input.index();
        Object root_0 = null;

        Token char_literal9=null;
        Token char_literal11=null;
        Token NUMBER12=null;
        Token TRUE13=null;
        Token FALSE14=null;
        MathExprParser.term_return term10 = null;

        MathExprParser.identifier_return identifier15 = null;

        MathExprParser.call_return call16 = null;


        Object char_literal9_tree=null;
        Object char_literal11_tree=null;
        Object NUMBER12_tree=null;
        Object TRUE13_tree=null;
        Object FALSE14_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // MathExpr.g:83:6: ( '(' term ')' | NUMBER | TRUE | FALSE | identifier | call )
            int alt3=6;
            switch ( input.LA(1) ) {
            case 49:
                {
                alt3=1;
                }
                break;
            case NUMBER:
                {
                alt3=2;
                }
                break;
            case TRUE:
                {
                alt3=3;
                }
                break;
            case FALSE:
                {
                alt3=4;
                }
                break;
            case IDENTIFIER:
                {
                int LA3_5 = input.LA(2);

                if ( (LA3_5==49) ) {
                    alt3=6;
                }
                else if ( (LA3_5==EOF||(LA3_5>=AND && LA3_5<=OR)||(LA3_5>=INT_DIV && LA3_5<=INT_MOD)||(LA3_5>=ADD && LA3_5<=BIT_OR)||(LA3_5>=GE && LA3_5<=48)||LA3_5==50||LA3_5==53||LA3_5==55) ) {
                    alt3=5;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 5, input);

                    throw nvae;
                }
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // MathExpr.g:84:3: '(' term ')'
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal9=(Token)match(input,49,FOLLOW_49_in_group874); if (state.failed) return retval;
                    pushFollow(FOLLOW_term_in_group877);
                    term10=term();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, term10.getTree());
                    char_literal11=(Token)match(input,50,FOLLOW_50_in_group879); if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // MathExpr.g:85:3: NUMBER
                    {
                    root_0 = (Object)adaptor.nil();

                    NUMBER12=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_group884); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NUMBER12_tree = (Object)adaptor.create(NUMBER12);
                    adaptor.addChild(root_0, NUMBER12_tree);
                    }

                    }
                    break;
                case 3 :
                    // MathExpr.g:86:3: TRUE
                    {
                    root_0 = (Object)adaptor.nil();

                    TRUE13=(Token)match(input,TRUE,FOLLOW_TRUE_in_group888); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    TRUE13_tree = (Object)adaptor.create(TRUE13);
                    adaptor.addChild(root_0, TRUE13_tree);
                    }

                    }
                    break;
                case 4 :
                    // MathExpr.g:87:3: FALSE
                    {
                    root_0 = (Object)adaptor.nil();

                    FALSE14=(Token)match(input,FALSE,FOLLOW_FALSE_in_group892); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    FALSE14_tree = (Object)adaptor.create(FALSE14);
                    adaptor.addChild(root_0, FALSE14_tree);
                    }

                    }
                    break;
                case 5 :
                    // MathExpr.g:88:3: identifier
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_identifier_in_group896);
                    identifier15=identifier();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, identifier15.getTree());

                    }
                    break;
                case 6 :
                    // MathExpr.g:89:3: call
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_call_in_group900);
                    call16=call();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, call16.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, group_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "group"

    public static class not_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "not"
    // MathExpr.g:93:1: not : ( group | NOT not );
    public final MathExprParser.not_return not() throws RecognitionException {
        MathExprParser.not_return retval = new MathExprParser.not_return();
        retval.start = input.LT(1);
        int not_StartIndex = input.index();
        Object root_0 = null;

        Token NOT18=null;
        MathExprParser.group_return group17 = null;

        MathExprParser.not_return not19 = null;


        Object NOT18_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // MathExpr.g:93:4: ( group | NOT not )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=TRUE && LA4_0<=FALSE)||(LA4_0>=NUMBER && LA4_0<=IDENTIFIER)||LA4_0==49) ) {
                alt4=1;
            }
            else if ( (LA4_0==NOT) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // MathExpr.g:93:8: group
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_group_in_not911);
                    group17=group();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, group17.getTree());

                    }
                    break;
                case 2 :
                    // MathExpr.g:93:16: NOT not
                    {
                    root_0 = (Object)adaptor.nil();

                    NOT18=(Token)match(input,NOT,FOLLOW_NOT_in_not915); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NOT18_tree = (Object)adaptor.create(NOT18);
                    root_0 = (Object)adaptor.becomeRoot(NOT18_tree, root_0);
                    }
                    pushFollow(FOLLOW_not_in_not918);
                    not19=not();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, not19.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, not_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "not"

    public static class multiplex_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "multiplex"
    // MathExpr.g:94:1: multiplex : not ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not )* ;
    public final MathExprParser.multiplex_return multiplex() throws RecognitionException {
        MathExprParser.multiplex_return retval = new MathExprParser.multiplex_return();
        retval.start = input.LT(1);
        int multiplex_StartIndex = input.index();
        Object root_0 = null;

        Token set21=null;
        MathExprParser.not_return not20 = null;

        MathExprParser.not_return not22 = null;


        Object set21_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // MathExpr.g:94:10: ( not ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not )* )
            // MathExpr.g:94:13: not ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_not_in_multiplex926);
            not20=not();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, not20.getTree());
            // MathExpr.g:94:17: ( ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=INT_DIV && LA5_0<=INT_MOD)||(LA5_0>=MUL && LA5_0<=BIT_AND)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // MathExpr.g:94:19: ( MUL | DIV | BIT_AND | INT_DIV | INT_MOD ) not
            	    {
            	    set21=(Token)input.LT(1);
            	    set21=(Token)input.LT(1);
            	    if ( (input.LA(1)>=INT_DIV && input.LA(1)<=INT_MOD)||(input.LA(1)>=MUL && input.LA(1)<=BIT_AND) ) {
            	        input.consume();
            	        if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set21), root_0);
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_not_in_multiplex953);
            	    not22=not();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, not22.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 6, multiplex_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "multiplex"

    public static class add_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "add"
    // MathExpr.g:95:1: add : multiplex ( ( ADD | SUB | BIT_OR ) multiplex )* ;
    public final MathExprParser.add_return add() throws RecognitionException {
        MathExprParser.add_return retval = new MathExprParser.add_return();
        retval.start = input.LT(1);
        int add_StartIndex = input.index();
        Object root_0 = null;

        Token set24=null;
        MathExprParser.multiplex_return multiplex23 = null;

        MathExprParser.multiplex_return multiplex25 = null;


        Object set24_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return retval; }
            // MathExpr.g:95:4: ( multiplex ( ( ADD | SUB | BIT_OR ) multiplex )* )
            // MathExpr.g:95:8: multiplex ( ( ADD | SUB | BIT_OR ) multiplex )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_multiplex_in_add966);
            multiplex23=multiplex();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, multiplex23.getTree());
            // MathExpr.g:95:19: ( ( ADD | SUB | BIT_OR ) multiplex )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=ADD && LA6_0<=SUB)||LA6_0==BIT_OR) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // MathExpr.g:95:21: ( ADD | SUB | BIT_OR ) multiplex
            	    {
            	    set24=(Token)input.LT(1);
            	    set24=(Token)input.LT(1);
            	    if ( (input.LA(1)>=ADD && input.LA(1)<=SUB)||input.LA(1)==BIT_OR ) {
            	        input.consume();
            	        if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set24), root_0);
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_multiplex_in_add986);
            	    multiplex25=multiplex();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, multiplex25.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 7, add_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "add"

    public static class compare_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compare"
    // MathExpr.g:96:1: compare : add ( ( GE | LE | NOTEQUALS | EQUALS | GT | LT ) add )? ;
    public final MathExprParser.compare_return compare() throws RecognitionException {
        MathExprParser.compare_return retval = new MathExprParser.compare_return();
        retval.start = input.LT(1);
        int compare_StartIndex = input.index();
        Object root_0 = null;

        Token set27=null;
        MathExprParser.add_return add26 = null;

        MathExprParser.add_return add28 = null;


        Object set27_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return retval; }
            // MathExpr.g:96:8: ( add ( ( GE | LE | NOTEQUALS | EQUALS | GT | LT ) add )? )
            // MathExpr.g:96:10: add ( ( GE | LE | NOTEQUALS | EQUALS | GT | LT ) add )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_add_in_compare1015);
            add26=add();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, add26.getTree());
            // MathExpr.g:96:14: ( ( GE | LE | NOTEQUALS | EQUALS | GT | LT ) add )?
            int alt7=2;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // MathExpr.g:96:16: ( GE | LE | NOTEQUALS | EQUALS | GT | LT ) add
                    {
                    set27=(Token)input.LT(1);
                    set27=(Token)input.LT(1);
                    if ( (input.LA(1)>=GE && input.LA(1)<=LT) ) {
                        input.consume();
                        if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set27), root_0);
                        state.errorRecovery=false;state.failed=false;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_add_in_compare1046);
                    add28=add();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, add28.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {
